# sd

./: .gitignore  README.md  app.py  pyproject.toml
assets/: styles.css
data/: affordable_housing_geocoded.csv  libraries_datasd.geojson  rec_centers_datasd.geojson  san_diego_mosques_geocoded.csv  schools.csv
