[tool.poetry]
name = "res-web-map"
version = "0.1.0"
description = ""
authors = ["EChebelyon <kipedie@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.0"
dash = "^2.1.0"
pandas = "^1.4.0"
geopandas = "^0.10.2"
Shapely = "^1.8.0"
numpy = "^1.22.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
